Add enhanced logging and improve Docker deployment
- Add startup config logging with masked secrets (password, API secret)
- Add HTTP status code logging for Nightscout uploads
- Add timezone-aware logging with TZ environment variable support
- Replace CARELINK_QUIET with standard LOG_LEVEL variable (info/debug)
- Add automated deploy-to-truenas.sh deployment script
- Improve config display: show 'System default' for timezone, 'debug/info' for log level
- Update all documentation and examples with new variables
- Maintain backward compatibility with CARELINK_QUIET

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ NS=https://your-nightscout-site.example.com
 # MMCONNECT_LANGCODE=en
 # CARELINK_INTERVAL=300
 # CARELINK_SGV_LIMIT=24
-# CARELINK_QUIET=true
+# LOG_LEVEL=info  # Options: info (default), debug
+# TZ=America/Toronto  # Timezone for log timestamps (e.g., America/New_York, Europe/London, UTC)
 # CARELINK_PATIENT=
 # USE_PROXY=false
